Added Google Chrome requirement to the modal

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h4 class="modal-title" id="myModalLabel">Welcome to the Coder's Corner Projects Project (working title)</h4>
           </div>
           <div class="modal-body">
-            <h2>Welcome to our humble corner.</h2>
+            <h2>Welcome to our humble corner.<br><small>Requires Google Chrome browser</small></h2>
             <p>If you are new to programming, this series of projects should get you coding in no time! Just be sure to follow our guides and we'll get you there. The general guidelines for getting the most out of these projects is listed below. Aside from that, I hope you enjoy them and feel free to send us any feedback!</p>
             <ul>
               <li>Always try to solve the problems on your own before checking out our solutions
