--- a/index.html
+++ b/index.html
@@ -61,16 +61,17 @@
             <h4 class="modal-title" id="myModalLabel">Welcome to the Coder's Corner Projects Project (working title)</h4>
           </div>
           <div class="modal-body">
-            <h2>Welcome to our humble corner.<br><small>Requires Google Chrome browser</small></h2>
-            <p>If you are new to programming, this series of projects should get you coding in no time! Just be sure to follow our guides and we'll get you there. The general guidelines for getting the most out of these projects is listed below. Aside from that, I hope you enjoy them and feel free to send us any feedback!</p>
+            <h2>Welcome to our humble corner.<br><small style='color:#DD2C00;'>Requires Google Chrome browser</small></h2>
+            <p>If you are new to programming, this series of projects should get you coding in no time! Just be sure to follow our guides and we'll get you there. The general guidelines for getting the most out of these projects is listed below. Aside from that, I hope you enjoy them and please let us know what you think!</p>
             <ul>
-              <li>Always try to solve the problems on your own before checking out our solutions
+              <li>Always try to solve the problems on your own before checking our solutions</li>
+              <li>Don't get discouraged if your solution is different from ours
                 <ul>
-                  <li>Remember, there are generally many solutions to every problem, so don't get discouraged if your solution looks different from ours. Just make sure it has the same functionality.</li>
-                  <li>Since there is no associated grade, there's really no reason to cheat. That doesn't mean that you should never look at the solutions to help yourself out when you're stuck though... My suggestion is if you feel like you're going in circles and can't find a solution, take a 5 minute break. Drink some tea, do some pushups, do something to get your mind completely off of coding, then come back with a fresh mindset. If you still can't figure it out after 15 minutes, check out our solution.</li>
+                  <li>There, in general, many ways to a problem.</li>
                 </ul>
               </li>
-              <li>If you do check out our solution, be sure to truly understand the solution. Don't just copy/paste. Mess around with it a bit. Understand each aspect of it.</li>
+              <li>If you get stuck on a problem, take a 5-10 minute break then try again before looking at our solution.</li>
+              <li>If you do check out our solution, be sure to understand it. Don't just copy/paste. Mess around with it a bit. Understand how it works.</li>
               <li>Have fun!</li>
             </ul>
           </div>
@@ -85,9 +86,9 @@
 
 <script>
 $(document).ready(function() {
-  if(!localStorage.getItem('visited_FVICodeProjects')) {
+  if(!localStorage.getItem('visited_cp')) {
     $('#welcome').modal('show');
-    localStorage.setItem('visited_FVICodeProjects', true);
+    localStorage.setItem('visited_cp', true);
   }
   $(document).keydown(function() {
     if (event.keyCode == 74 || event.keyCode == 83 || event.keyCode == 40) { // J or S or DownArrow
